Crash with "modified node is not on IGVN._worklist" when running with -XX:-SplitIfBlocks

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b120

      JDK 9-fastdebug b66 hit assertion when ran with "-Xcomp -XX:+BackgroundCompilation -XX:-SplitIfBlocks" options on Linux-x64 platform.

      Running next command give following result(hs_err_pid21754.log and replay_pid21754.log are attached):
      java -Xcomp -XX:+BackgroundCompilation -XX:-SplitIfBlocks
       739 Opaque1 === _ 1243 137 [[ 716 ]]
      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/phaseX.cpp:952
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/HUDSON/workspace/9-2-build-linux-amd64/jdk9/2755/hotspot/src/share/vm/opto/phaseX.cpp:952), pid=21754, tid=0x00007fc20771a700
      # assert(false) failed: modified node is not on IGVN._worklist
      #
      # JRE version: Java(TM) SE Runtime Environment (9.0-b66) (build 1.9.0-ea-fastdebug-b66)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-ea-fastdebug-b66 compiled mode linux-amd64 compressed oops)
      # Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c" (or dumping to /home/dmitry/bundles/jdk9/b66/fastdebug/bin/core.21754)
      #
      # An error report file with more information is saved as:
      # /home/dmitry/bundles/jdk9/b66/fastdebug/bin/hs_err_pid21754.log
      ...


      JDK 8u45-fastdebug not affected(not hit assertion with these options)

            Assignee:
            Tobias Hartmann
            Reporter:
            Dmitry Dmitriev
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: