8086057: Crash with "modified node is not on IGVN._worklist" when running with -XX:-SplitIfBlocks

Pre-loop Opaque1 node 'pre_opaq' should be put on the IGVN worklist after modification.

Reviewed-by: kvn